--- a/elections_france.Rmd
+++ b/elections_france.Rmd
@@ -1,8 +1,6 @@
 ---
 title: "Elections France 2017"
-output:
-  html_document: default
-  html_notebook: default
+output:  github_document
 ---
 ```{r}
 library(dplyr)
@@ -124,30 +122,30 @@ comm@data <- left_join(comm@data, df_pres_merged_chomage, by = c("INSEE_COM" = "
 
 ```{r}
 # Filtrage des données pour ne garder que la région Ile-De-France
-idf <- comm[comm@data$CODE_REG=="11",]
-# Vérification
-str(idf, 2)
+comm <- comm[comm@data$CODE_REG=="11",]
+
 ```
 ```{r}
 # Découpage du temps de trajet en 5 classes via la méthodes des quantiles : idenfication des bornes (breaks, ou brks)
-classSuffrages <- classIntervals(idf@data$X..Voix.Exp.1, 5, style = "quantile")
+classSuffrages <- classIntervals(comm@data$X..Voix.Exp.1, 5, style = "quantile")
 # Choix d'une palette de couleur pour les 5 catégories
 palette <- brewer.pal(n = 5, name = "YlOrRd")
 
 
 # Application de ce découpage à variable temps, sauvegarde dans temps_cat
 # On stocke, pour chaque observation, la valeur de la couleur correspondante
-idf@data$suffrage_cat <- as.character(cut(idf@data$X..Voix.Exp.1, breaks = classSuffrages$brks, labels = palette, include.lowest = TRUE))
+comm@data$suffrage_cat <- as.character(cut(comm@data$X..Voix.Exp.1, breaks = classSuffrages$brks, labels = palette, include.lowest = TRUE))
 
 # On stocke l'information des classes pour créer une légende 
-legende <- as.character(levels(cut(idf@data$X..Voix.Exp.1, breaks = classSuffrages$brks, include.lowest = TRUE, right = FALSE)))
+legende <- as.character(levels(cut(comm@data$X..Voix.Exp.1, breaks = classSuffrages$brks, include.lowest = TRUE, right = FALSE)))
 
 # Vérification
-str(idf@data)
+str(comm@data)
 ```
 
 ```{r}
-plot(idf, col = idf@data$suffrage_cat, border = "black")
-legend("bottomleft", legend = legende, fill = palette, cex=0.6, title = "Temps de parcours moyen (minutes)")
+plot(comm, col = comm@data$suffrage_cat, border='black',lwd=0.001)
+legend("bottomleft", legend = legende, fill = palette, cex=0.6, title = "Vote Le Pen 2012")
 ```
+
 
