--- a/elections_france.Rmd
+++ b/elections_france.Rmd
@@ -28,27 +28,52 @@ df_chomage<-read.csv('data/chomages_France.csv',sep=';',stringsAsFactors = F,ski
 
 df_chomage$ZE2010<- df_chomage$ZE2010 %>% as.numeric()
 df_zones_communes<- read.csv('data/code_geo_communes.csv',sep=';',stringsAsFactors = 1)
-df_pres<-read.csv('data/Pres 2012.csv',stringsAsFactors = F,sep=';')
-
-
+df_pres<-read.csv('data/Pres_Tour1_2017.csv',stringsAsFactors = F,sep=';')
 
 ```
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
-
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
+Clean the mess with the votes results (the score are ranked per columns !!!)
 
 ```{r}
+df_test<-(df_pres)
 
-sample_communes<-sample_n(df_zones_communes,50) %>% select(LIBGEO) %>% .$LIBGEO
-sample_pres<-sample_n(df_pres,100) %>% select(Libellé.de.la.commune)%>% .$Libellé.de.la.commune
+colos_Exp<-grep('X..Voix.Exp',colnames(df_pres),value = T)
+colos_name<-grep('Nom',colnames(df_test),value = T)
+colos_Voix<-grep('^Voix',colnames(df_test),value = T)
+
+
+filtered_df_pres<-df_test %>% select_(.dots = c(colos_Exp,colos_name,colos_Voix,"Code.de.la.commune", "Libellé.de.la.commune","Code.du.département","Libellé.du.département","Votants"))
+
+gather_name<-filtered_df_pres %>% gather(key,'Nom',starts_with('Nom')) 
+gather_scores<- filtered_df_pres%>% gather(key,'Score',starts_with('X..Voix.Exp'))
+gather_voix<- filtered_df_pres%>% gather(key,'Voix',starts_with('Voix'))
+
+
+gather_name_scores<- data.frame(select(gather_scores, Score), select(gather_name,Nom,Code.de.la.commune, Libellé.de.la.commune,Code.du.département,Libellé.du.département,Votants),select(gather_voix,Voix))
+
+df_pres<-gather_name_scores
+
+ggplot(gather_name_scores,aes(x=Nom,y=Score, col=Nom))+ geom_boxplot()
+
 ```
-
 ```{r}
-
-df_pres %>% filter (Libellé.de.la.commune %in% sample_pres)
-df_zones_communes %>% filter(LIBGEO %in% sample_pres)
+gather_name_scores %>% filter(Code.du.département==73  &  grepl("Peis",Libellé.de.la.commune))
 ```
+
+top LE PEN :
+```{r}
+gather_name_scores %>% filter(Nom=='LE PEN' & Score>70)  %>% arrange(desc(Votants))
+```
+
+Spread candidate names :
+```{r}
+df_pres_clean<- df_pres   %>% group_by(Code.du.département,Libellé.du.département,
+                                       Code.de.la.commune,Libellé.de.la.commune,Nom) %>% summarise(Mean_Score=mean(Score)) %>% spread(Nom,Mean_Score)
+filter(df_pres_clean,grepl('^Peis',Libellé.de.la.commune)& Code.du.département==73)
+
+```
+
+
 
 ```{r}
 df_zones_communes$dept<-str_sub(df_zones_communes$CODGEO,1,end=2) %>% as.numeric()
@@ -57,7 +82,7 @@ str(df_zones_communes)
 ```
 
 ```{r}
-df_pres_merged<-merge(df_pres,df_zones_communes, by.y = c('dept','communes'),by.x = c('Code.du.département','Code.de.la.commune'),all.x = TRUE)
+df_pres_merged<-merge(df_pres_clean,df_zones_communes, by.y = c('dept','communes'),by.x = c('Code.du.département','Code.de.la.commune'),all.x = TRUE)
 #str(df_pres_merged)
 #df_pres_merged[is.na(df_pres_merged$ZE2010),]$Libellé.de.la.commune
 ```
@@ -66,12 +91,7 @@ nrow(df_pres_merged[is.na(df_pres_merged$ZE2010),])/nrow(df_pres)*100
 
 ```
 
-```{r}
-df_zones_communes %>% filter(grepl("Song",LIBGEO))
-```
-```{r}
-df_pres %>% filter(grepl("Natt",Libellé.de.la.commune))
-```
+
 ```{r}
 df_pres_merged_chomage<-merge(df_pres_merged,df_chomage,by = 'ZE2010',all.x=T)
 dim(df_pres_merged_chomage)
@@ -85,7 +105,10 @@ dim(df_pres_merged_chomage)
 head(df_pres_merged_chomage)
 ```
 ```{r}
-ggpairs(df_pres_merged_chomage,columns = c("X2016.T4","X..Voix.Exp.1","X..Voix.Exp.2","X..Voix.Exp.3"))
+# rename Le Pen
+names(df_pres_merged_chomage)[names(df_pres_merged_chomage) == 'LE PEN'] <- 'LE_PEN'
+ggpairs(df_pres_merged_chomage,columns = c("X2016.T4","LE_PEN","MÉLENCHON","FILLON","MACRON"))
+str(df_pres_merged_chomage)
 ```
 
 ```{r}
@@ -128,17 +151,17 @@ comm <- comm[comm@data$CODE_REG=="53",]
 ```
 ```{r}
 # Découpage du taux de vote   en 5 classes via la méthodes des quantiles : idenfication des bornes (breaks, ou brks)
-classSuffrages <- classIntervals(comm@data$X..Voix.Exp.1, 5, style = "quantile")
+classSuffrages <- classIntervals(comm@data$LE_PEN, 5, style = "quantile")
 # Choix d'une palette de couleur pour les 5 catégories
 palette <- brewer.pal(n = 5, name = "YlOrRd")
 
 
 # Application de ce découpage à la variable suffrages, sauvegarde dans suffrage_cat
 # On stocke, pour chaque observation, la valeur de la couleur correspondante
-comm@data$suffrage_cat <- as.character(cut(comm@data$X..Voix.Exp.1, breaks = classSuffrages$brks, labels = palette, include.lowest = TRUE))
+comm@data$suffrage_cat <- as.character(cut(comm@data$LE_PEN, breaks = classSuffrages$brks, labels = palette, include.lowest = TRUE))
 
 # On stocke l'information des classes pour créer une légende 
-legende <- as.character(levels(cut(comm@data$X..Voix.Exp.1, breaks = classSuffrages$brks, include.lowest = TRUE, right = FALSE)))
+legende_LePen <- as.character(levels(cut(comm@data$LE_PEN, breaks = classSuffrages$brks, include.lowest = TRUE, right = FALSE)))
 
 ```
 
@@ -155,20 +178,20 @@ palette <- brewer.pal(n = 5, name = "YlOrRd")
 comm@data$chomage_cat <- as.character(cut(comm@data$X2016.T4, breaks = classChomage$brks, labels = palette, include.lowest = TRUE))
 
 # On stocke l'information des classes pour créer une légende 
-legende <- as.character(levels(cut(comm@data$X2016.T4, breaks = classChomage$brks, include.lowest = TRUE, right = FALSE)))
+legende_chomage <- as.character(levels(cut(comm@data$X2016.T4, breaks = classChomage$brks, include.lowest = TRUE, right = FALSE)))
 ```
 
 ```{r}
 plot(comm, col = comm@data$suffrage_cat, border='black',lwd=0.001)
 
-legend("bottomleft", legend = legende, fill = palette, cex=0.6, title = "Vote Le Pen 2012")
+legend("bottomleft", legend = legende_LePen, fill = palette, cex=0.6, title = "Vote Le Pen 2017")
 
 ```
 
   
 ```{r}
 plot(comm, col = comm@data$chomage_cat, border='black',lwd=0.001)
-legend("bottomleft", legend = legende, fill = palette, cex=0.6, title = "Chomage T4 2016")
+legend("bottomleft", legend = legende_chomage, fill = palette, cex=0.6, title = "Chomage T4 2016")
 ```
 ```{r}
 revenus <- read.csv('data/revenus.csv')
