--- a/elections_france_combine_data.Rmd
+++ b/elections_france_combine_data.Rmd
@@ -12,7 +12,7 @@ library(GGally)
 
 ```{r}
 df_zones_communes<- read.csv('data/DOI/code_geo_communes.csv',sep=';',stringsAsFactors = 1)
-df_votes.2017<-head(read.csv('data/DOI/pres_1erTour_2017_commune_candidat.csv',stringsAsFactors = F),1000)
+df_votes.2017<-read.csv('data/DOI/pres_1erTour_2017_commune_candidat.csv',stringsAsFactors = F)
 df_population.2011<-read.csv('data/DOI/base-cc-evol-struct-pop-2011.csv',stringsAsFactors = F)
 df_emploi.dec.2016.sex<-read.csv('data/DOI/communes_internet_decembre_2016_gorf18oa_per_sex.csv',stringsAsFactors = F)
 df_emploi.dec.2016.age<-read.csv('data/DOI/communes_internet_decembre_2016_gorf18oa_per_age.csv',stringsAsFactors = F)
@@ -40,10 +40,33 @@ df_votes.2017$CODGEO<-as.character(df_votes.2017$CODGEO)
 ```
 
 ```{r}
-df_merge_1<- merge(df_votes.2017, df_population.2011,by='CODGEO')
-df_merge_1<-merge(df_merge_1,df_emploi.dec.2016.sex,x.by='CODGEO',y.by='Code.Insee.de.la.commune')
-df_merge_1<-merge(df_merge_1,df_emploi.dec.2016.age,x.by='CODGEO',y.by='Code.Insee.de.la.commune')
-df_merge_1<-merge(df_merge_1,df_misc.param,by='CODGEO')
-head(df_merge_1)
+df.all<- merge(df_votes.2017, df_population.2011,by='CODGEO')
+df.all<-merge(df.all,df_emploi.dec.2016.sex,x.by='CODGEO',y.by='Code.Insee.de.la.commune')
+df.all<-merge(df.all,df_emploi.dec.2016.age,x.by='CODGEO',y.by='Code.Insee.de.la.commune')
+df.all<-merge(df.all,df_misc.param,by='CODGEO')
+head(df.all)
+```
+### Add unemployment rate
+
+```{r}
+# per sex
+POP_Active_Male_cols<-grep('C11_H15P_C',colnames(df.all),value = T)
+df.all$POP_Active_Male<- df.all %>% select(one_of(POP_Active_Male_cols)) %>% rowSums(.)
+df.all<-df.all%>% mutate(POP_Active_Male_NoJob=Hommes/POP_Active_Male)
+
+POP_Active_Female_cols<-grep('C11_F15P_C',colnames(df.all),value = T)
+df.all$POP_Active_Female<- df.all %>% select(one_of(POP_Active_Female_cols)) %>% rowSums(.)
+df.all<-df.all%>% mutate(POP_Active_Female_NoJob=Femmes/POP_Active_Female)
+
+
+# per age class
+
+
+
+```
+
+Focus on one city :
+```{r}
+df.all %>% filter(CODGEO==41269) %>% gather()
 ```
 
