--- a/elections_france_combine_data.Rmd
+++ b/elections_france_combine_data.Rmd
@@ -19,6 +19,7 @@ df_population.2011<-read.csv('data/DOI/base-cc-evol-struct-pop-2011.csv',strings
 df_emploi.dec.2016.sex<-read.csv('data/DOI/communes_internet_decembre_2016_gorf18oa_per_sex.csv',stringsAsFactors = F)
 df_emploi.dec.2016.age<-read.csv('data/DOI/communes_internet_decembre_2016_gorf18oa_per_age.csv',stringsAsFactors = F)
 df_misc.param<-read.csv('data/DOI/MDB-INSEE-V2.csv',stringsAsFactors = F)
+df_revenus<-read.csv('data/DOI/revenus_median.csv')
 
 candidats<-c("ARTHAUD","ASSELINEAU","CHEMINADE","DUPONT.AIGNAN","FILLON","HAMON","LASSALLE","LE.PEN","MACRON","MÉLENCHON","POUTOU")
 
@@ -32,7 +33,7 @@ df_emploi.dec.2016.sex[,7:9]<-lapply(df_emploi.dec.2016.sex[,7:9],function(x){as
 
 ```
 ### Combine zone geo with votes :
-### Combine votes with population structure :
+
 ```{r}
 df_zones_communes$dept<-str_sub(df_zones_communes$CODGEO,1,end=2) %>% as.numeric()
 df_zones_communes$communes<-str_sub(df_zones_communes$CODGEO,3)%>% as.numeric()
@@ -43,12 +44,13 @@ df_votes.2017<-merge(df_votes.2017,df_zones_communes, by.y = c('dept','communes'
 df_votes.2017$CODGEO<-as.character(df_votes.2017$CODGEO)
 
 ```
-
+### Combine votes with population structure :
 ```{r}
 df.all<- merge(df_votes.2017, df_population.2011,by='CODGEO')
 df.all<-merge(df.all,df_emploi.dec.2016.sex,x.by='CODGEO',y.by='Code.Insee.de.la.commune')
 df.all<-merge(df.all,df_emploi.dec.2016.age,x.by='CODGEO',y.by='Code.Insee.de.la.commune')
 df.all<-merge(df.all,df_misc.param,by='CODGEO')
+df.all<-merge(df.all,df_revenus %>% select(-LIBGEO),by='CODGEO')
 head(df.all)
 ```
 ### Add unemployment rate
@@ -62,6 +64,13 @@ df.all<-df.all%>% mutate(POP_Active_Male_NoJob=Hommes/POP_Active_Male)
 POP_Active_Female_cols<-grep('C11_F15P_C',colnames(df.all),value = T)
 df.all$POP_Active_Female<- df.all %>% select(one_of(POP_Active_Female_cols)) %>% rowSums(.)
 df.all<-df.all%>% mutate(POP_Active_Female_NoJob=Femmes/POP_Active_Female)
+
+
+
+
+df.all<- df.all %>% mutate(POP_Active_Agricole= C11_POP15P_CS1/(POP_Active_Female+POP_Active_Male))
+df.all<-df.all %>% mutate(POP_Active_Agricole_log= log(POP_Active_Agricole+1))
+
 
 
 
@@ -95,18 +104,35 @@ df.all[which.min(df.all$P11_POP),]
 summary(df.all$P11_POP)
 
 ```
+
+### Clean features
 ```{r}
-df.all_numeric<-df.all %>% select(-contains('C11')) %>% select(-contains('P11')) %>% select_if(is.numeric)
-str(df.all_numeric)
+# Remove demographic classes data
+df.all.clean<-df.all %>% select(-contains('C11')) %>% select(-contains('P11'))
+
+# add Ratio
+
+Nb.Columns<- grep('Nb.',colnames(df.all.clean),value = T)
+Ratio.Nb <- gsub("Nb.", "Ratio.", Nb.Columns)
+
+df.all.clean<-df.all.clean %>% mutate_each(funs(ratio=log(./Population+1)),contains('Nb.'))
+
+
 ```
 
 ```{r}
-candidats_one<-candidats[!candidats %in% c('LE.PEN')]
-candidats_one
-model1<-lm(LE.PEN~.,data=df.all_numeric %>% select(-one_of(candidats_one)))
-```
-
-```{r}
+bretagne<-df.all.clean %>% filter(Code.Insee.de.la.région==24) %>% filter(!is.na(Q3_Q1))
+bretagne$extremes<-bretagne$LE.PEN+bretagne$MÉLENCHON
+dim(bretagne)
+model1<-lm(LE.PEN~. ,data=bretagne %>%select(matches('LE.PEN|NoJob|Q213|Q3_Q1|GI13|RD|Score.PIB|_ratio|Population')))
 summary(model1)
+```
+
+```{r}
+ggplot(df.all.clean  %>% filter(Code.Insee.de.la.région %in% c(32,53,93)) %>% filter(Population>10),aes(x=log(Q3_Q1),y=log(LE.PEN),col=Code.Insee.de.la.région))+geom_jitter(alpha=.3) #+geom_smooth(method = 'lm')
+```
+
+```{r}
+ggplot(df.all.clean %>% filter(Q213<30000) %>% filter(Code.Insee.de.la.région==53),aes(x=Q213,y=Q3_Q1,col=LE.PEN))+ geom_jitter(alpha=.3)+scale_color_gradientn(colours = rainbow(5))
 ```
 
