--- a/elections_france_combine_data.Rmd
+++ b/elections_france_combine_data.Rmd
@@ -14,6 +14,8 @@ library(ggcorrplot)
 
 ```{r}
 df_zones_communes<- read.csv('data/DOI/code_geo_communes.csv',sep=';',stringsAsFactors = 1)
+df_regions<-read.table('data/DOI/reg2016.txt',  sep="\t",quote = "\n",header = T)
+df_regions<-df_regions %>% select(REGION,NCC)
 df_votes.2017<-read.csv('data/DOI/pres_1erTour_2017_commune_candidat.csv',stringsAsFactors = F)
 df_population.2011<-read.csv('data/DOI/base-cc-evol-struct-pop-2011.csv',stringsAsFactors = F)
 df_emploi.dec.2016.sex<-read.csv('data/DOI/communes_internet_decembre_2016_gorf18oa_per_sex.csv',stringsAsFactors = F)
@@ -32,14 +34,19 @@ df_emploi.dec.2016.age[,7:9]<-lapply(df_emploi.dec.2016.age[,7:9],function(x){as
 df_emploi.dec.2016.sex[,7:9]<-lapply(df_emploi.dec.2016.sex[,7:9],function(x){as.numeric(gsub(",", "", x))})
 
 ```
-### Combine zone geo with votes :
-
+### Combine communes with regions names:
 ```{r}
 df_zones_communes$dept<-str_sub(df_zones_communes$CODGEO,1,end=2) %>% as.numeric()
 df_zones_communes$communes<-str_sub(df_zones_communes$CODGEO,3)%>% as.numeric()
+df_zones_communes<-merge(df_zones_communes,df_regions,by.x="REG",by.y="REGION")
+
+head(df_zones_communes)
+```
 
 
+### Combine zone geo with votes :
 
+```{r}
 df_votes.2017<-merge(df_votes.2017,df_zones_communes, by.y = c('dept','communes'),by.x = c('Code.du.département','Code.de.la.commune'),all.x = TRUE)
 df_votes.2017$CODGEO<-as.character(df_votes.2017$CODGEO)
 
@@ -129,7 +136,8 @@ summary(model1)
 ```
 
 ```{r}
-ggplot(df.all.clean  %>% filter(Code.Insee.de.la.région %in% c(32,53,93)) %>% filter(Population>10),aes(x=log(Q3_Q1),y=log(LE.PEN),col=Code.Insee.de.la.région))+geom_jitter(alpha=.3) #+geom_smooth(method = 'lm')
+ggplot(df.all.clean  %>% filter(NCC =="BRETAGNE") %>% filter(Population>10),aes(x=Q3_Q1,y=LE.PEN,col=NCC))+geom_jitter(alpha=.3) #+geom_smooth(method = 'lm')
+ggplot(df.all.clean  %>% filter(Code.Insee.de.la.région %in% c(32,53,93)) %>% filter(Population<100000),aes(x=log(Population),y=(MACRON),col=NCC))+geom_jitter(alpha=.3) #+geom_smooth(method = 'lm')
 ```
 
 ```{r}
