--- a/elections_france_data_wrangling.Rmd
+++ b/elections_france_data_wrangling.Rmd
@@ -53,7 +53,7 @@ Spread candidate names :
 ```{r}
 df_votes.2017<- df_votes.2017   %>% group_by(Code.du.département,Libellé.du.département,
                                        Code.de.la.commune,Libellé.de.la.commune,Nom,Votants,Inscrits,Abstentions,Exprimés,X..Abs.Ins,X..Exp.Vot) %>% summarise(Mean_Score=mean(Score)) %>% spread(Nom,Mean_Score)
-filter(df_votes.2017,grepl('^Peis',Libellé.de.la.commune)& Code.du.département==73)
+filter(df_votes.2017,grepl('Vichy',Libellé.de.la.commune)& Code.du.département==3)
 
 write.csv(df_votes.2017,'data/DOI/pres_1erTour_2017_commune_candidat.csv')
 
