--- a/elections_france_maps.Rmd
+++ b/elections_france_maps.Rmd
@@ -6,6 +6,8 @@ output:  github_document
 ```{r}
 library("sp")
 library("rgdal")
+library(dplyr)
+library(tidyr)
 
 library("RColorBrewer")
 library("classInt")
@@ -27,110 +29,73 @@ ogrInfo(dsn = pathToShp,layer="COMMUNE")
 # Import via la fonction readOGR de rgdal
 # Pour info, d'autres outils existent (ex : fonction readShapeSpatial() du package maptools)
 comm <- readOGR(dsn = pathToShp, layer="COMMUNE", stringsAsFactors=FALSE)
-```
-```{r}
-# Description de la structure globale
-str(comm, 2)
-```
-```{r}
-# Description de la structure des données associées 
-str(comm@data, 2)
+df.elections_2017<-read.csv('data/DOI/elections_2017_First_round.csv',colClasses=c(CODGEO='character'))
+df.elections_2017 %>% filter(grepl('03310',CODGEO))
+#df.elections_2017$CODGEO<-as.character(df.elections_2017$CODGEO)
 ```
 
-```{r}
-# Représentation de toutes les communes d'IDF
-plot(comm[comm$CODE_REG=="11",])
-# Ajout sur le graphique précédent (via add = TRUE) des communes d'intérêt, remplies en rouge (via col="red") 
-plot(comm[comm$CODE_REG=="11" & comm$POPULATION>5000,], col="red",add=T)
-```
 
 ```{r}
-comm@data <- left_join(comm@data, df_pres_merged_chomage, by = c("INSEE_COM" = "CODGEO"))
+dim(comm@data)
+comm@data <- left_join(comm@data, df.elections_2017, by=c("INSEE_COM"="CODGEO"))
+dim(comm)
 ```
 
 ```{r}
 # Filtrage des données pour ne garder que la région Bretagne
 comm <- comm[comm@data$CODE_REG=="53",]
-
+dim(comm)
+summarise_each(comm@data, funs(sum(is.na(.)/n()))) %>% gather() %>% arrange(desc(value))
 ```
+
+
 ```{r}
 # Découpage du taux de vote   en 5 classes via la méthodes des quantiles : idenfication des bornes (breaks, ou brks)
-classSuffrages <- classIntervals(comm@data$LE_PEN, 5, style = "quantile")
+classSuffrages <- classIntervals(comm@data$LE.PEN, 5, style = "quantile")
 # Choix d'une palette de couleur pour les 5 catégories
 palette <- brewer.pal(n = 5, name = "YlOrRd")
 
 
 # Application de ce découpage à la variable suffrages, sauvegarde dans suffrage_cat
 # On stocke, pour chaque observation, la valeur de la couleur correspondante
-comm@data$suffrage_cat <- as.character(cut(comm@data$LE_PEN, breaks = classSuffrages$brks, labels = palette, include.lowest = TRUE))
+comm@data$suffrage_cat <- as.character(cut(comm@data$LE.PEN, breaks = classSuffrages$brks, labels = palette, include.lowest = TRUE))
 
 # On stocke l'information des classes pour créer une légende 
-legende_LePen <- as.character(levels(cut(comm@data$LE_PEN, breaks = classSuffrages$brks, include.lowest = TRUE, right = FALSE)))
+legende_LePen <- as.character(levels(cut(comm@data$LE.PEN, breaks = classSuffrages$brks, include.lowest = TRUE, right = FALSE)))
 
 ```
 
 
-```{r}
-# Découpage du taux de vote   en 5 classes via la méthodes des quantiles : idenfication des bornes (breaks, ou brks)
-classChomage <- classIntervals(comm@data$X2016.T4, 5, style = "quantile")
-# Choix d'une palette de couleur pour les 5 catégories
-palette <- brewer.pal(n = 5, name = "YlOrRd")
-
-
-# Application de ce découpage à la variable suffrages, sauvegarde dans suffrage_cat
-# On stocke, pour chaque observation, la valeur de la couleur correspondante
-comm@data$chomage_cat <- as.character(cut(comm@data$X2016.T4, breaks = classChomage$brks, labels = palette, include.lowest = TRUE))
-
-# On stocke l'information des classes pour créer une légende 
-legende_chomage <- as.character(levels(cut(comm@data$X2016.T4, breaks = classChomage$brks, include.lowest = TRUE, right = FALSE)))
-```
 
 ```{r}
 plot(comm, col = comm@data$suffrage_cat, border='black',lwd=0.001)
 
 legend("bottomleft", legend = legende_LePen, fill = palette, cex=0.6, title = "Vote Le Pen 2017")
-##
+
 
 ```
 
   
+
 ```{r}
-plot(comm, col = comm@data$chomage_cat, border='black',lwd=0.001)
-legend("bottomleft", legend = legende_chomage, fill = palette, cex=0.6, title = "Chomage T4 2016")
-```
-```{r}
-revenus <- read.csv('data/revenus.csv')
-communes <- merge(comm, revenus, by.x="INSEE_COM", by.y="COMMUNE")
-
-# Lecture des données cantonales
-cantons  <- read.csv('data/cantons.csv')
-
-# Jointure des données
-communes <- merge(communes, cantons, by="CANTON", all.x=TRUE)
-
-# Affectation de la moyenne cantonale aux communes sans données
-communes$REVENUS[is.na(communes$REVENUS)] <- communes$REVENUC[is.na(communes$REVENUS)]
 
 col <- findColours(classIntervals(
-            communes$REVENUS, 100, style="quantile"),
-            smoothColors("#FFFFD7",98,"#F3674C"))
+            comm$Q213, 4, style="quantile"),
+            smoothColors("blue",98,"red"))
 
 leg <- findColours(classIntervals(
-            round(communes$REVENUS,0), 4, style="quantile"),
-            smoothColors("#FFFFD7",2,"#F3674C"),
+            round(comm$Q213,0), 4, style="quantile"),
+            smoothColors("blue",2,"red"),
             under="moins de", over="plus de", between="–",
             cutlabels=FALSE)
-```
 
-
-```{r}
-plot(communes,   col=col, border=col, lwd=.1)
-
+plot(comm,   col=col, border=col, lwd=.1)
 
 legend("bottomleft",fill=attr(leg, "palette"),
     legend=gsub("\\.", ",", names(attr(leg,"table"))),
     title = "Revenu médian par UC :")
 
-
 ```
+
+
 
